# gemini-ai

./: .gitignore  architecture_design.md  dog_life_log_20260110_154604.json  main.py  project_tasks_db_20260110134914.json  pyproject.toml
day/: check_env.py  day01_chat.py  day01_chat_aio.py  day01_quickstart.py  day01_reviewer.py  day02_dataframe.py  day02_groupby.py  day03_markdown.py  day04_parseJson.py  day04_parseJson_final.py  day05_gemini.py  day05_rember.py  day05_retrybuild.py  day06_multipy.py  day06_petlife_assisant.py  day07_ascII.py  day07_embedding.py  day07_embedding_v2.py  day07_local_embedding.py  day07_raw_http.py  day07_utf8.py  day08_vectordb.py  day09_rag_bot.py  day10_01_index.py  day10_02_indexer.py  day10_03_search.py  day11_01_rag.py  day12_01_function_calling.py  day12_02_auto_function_calling copy.py  day12_03_manual_function_calling.py  day13_01_agent.py  day13_02_ui.py  day14_01_rag_agent.py  day15_final_app.py  day16_01_api.py  day16_02_gui.py
day/utils/: ai_tools.py
rst/: architecture_design.md  dog_life_log_20260110_161954.json  dog_life_log_20260110_162017.json  dog_life_log_20260112_162017.json  rs01.csv
rst/chroma_db/: chroma.sqlite3
